<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.eclipse.emf.ecoretools.ale</groupId>
	<artifactId>root</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>


	<properties>
		<tycho.version>0.26.0</tycho.version>
		<xtend.version>2.10.0</xtend.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<eclipse-repo.url>http://download.eclipse.org/releases/neon</eclipse-repo.url>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<tycho.scmUrl>scm:git:https://github.com/gemoc/ale-lang.git</tycho.scmUrl>
	</properties>

	<repositories>
		<repository>
			<id>eclipse-repo</id>
			<url>${eclipse-repo.url}</url>
			<layout>p2</layout>
		</repository>
		<repository>
			<id>acceleo</id>
			<url>http://download.eclipse.org/acceleo/updates/releases/</url>
			<layout>p2</layout>
		</repository>
	</repositories>

	<modules>
		<module>plugins</module>
		<module>releng</module>
		<module>tests</module>
	</modules>
	<build>
		<plugins>
			<!-- enable xtend compilation -->
			<plugin>
				<groupId>org.eclipse.xtend</groupId>
				<artifactId>xtend-maven-plugin</artifactId>
				<version>${xtend.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>compile</goal>
							<goal>xtend-install-debug-info</goal>
							<goal>testCompile</goal>
							<goal>xtend-test-install-debug-info</goal>
						</goals>
						<configuration>
							<outputDirectory>xtend-gen</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- enable generation of Eclipse-SourceReferences MANIFEST header -->
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-packaging-plugin</artifactId>
				<version>${tycho.version}</version>
				<dependencies>
					<dependency>
						<groupId>org.eclipse.tycho.extras</groupId>
						<artifactId>tycho-sourceref-jgit</artifactId>
						<version>${tycho.version}</version>
					</dependency>
				</dependencies>
				<configuration>
					<sourceReferences>
						<generate>true</generate>
					</sourceReferences>
				</configuration>
			</plugin>
			<!-- enable source bundle generation -->
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-source-plugin</artifactId>
				<version>${tycho.version}</version>
				<executions>
					<execution>
						<id>plugin-source</id>
						<goals>
							<goal>plugin-source</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- enable source feature generation -->
			<plugin>
				<groupId>org.eclipse.tycho.extras</groupId>
				<artifactId>tycho-source-feature-plugin</artifactId>
				<version>${tycho.version}</version>
				<executions>
					<execution>
						<id>source-feature</id>
						<phase>package</phase>
						<goals>
							<goal>source-feature</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- required in order to embed feature and bundle sources in the update site -->
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-p2-plugin</artifactId>
				<version>${tycho.version}</version>
				<executions>
					<execution>
						<id>attached-p2-metadata</id>
						<phase>package</phase>
						<goals>
							<goal>p2-metadata</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- enable plugin tests -->
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-surefire-plugin</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<argLine>-Xmx1024m -XX:MaxPermSize=1024m</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
